2007-09-08  Wakaba  <wakaba@suika.fam.cx>

	* parser.cgi, parser-interface.en.html, ChangeLog,
	cvscommit.sh: New files.
