@@ -1,3 +1,9 @@
+2007-09-22  Wakaba  <wakaba@suika.fam.cx>
+
+	* parser.cgi: Selectors parsing mode added.
+
+	* parser-interface.en.html: Selectors parsing support added.
+
 2007-09-08  Wakaba  <wakaba@suika.fam.cx>
 
 	* parser.cgi, parser-interface.en.html, ChangeLog,
